bug 10894 - shift-tab to focus broken in metadata editor (r=pvh)
instead of using a bunch of hboxes, just use a grid like it's designed to.  This way we can get rid of tabindex, which then works around the bug.

now also with improved advanced tab (selectable text!)


git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@10977 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/gonzo/chrome/content/global/textbox.css
+++ b/feathers/gonzo/chrome/content/global/textbox.css
@@ -70,13 +70,10 @@ textbox[multiline="true"] > .textbox-input-box {
 /* ::::: plain textbox ::::: */
 
 textbox.plain {
-/*
-  -moz-appearance: none !important;
-  padding: 0px !important;
-  margin: 0px !important;
-  border: none !important;
-*/
+  -moz-appearance: none;
+  padding: 0px;
+  border: none;
+  background: transparent;
 }
-
 
 
